mybatis-generator代码生成器v1.0

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,6 @@ cux:
     mapper-locations: classpath:mybatis/mapper/*.xml # nameSpace必须与mapper的接口名一致
     configuration:
       mapUnderscoreToCamelCase: true
+
+server:
+  port: 9111
