mybatis-generator代码生成器v1.0

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
 
 cux:
   mybatis:
+    dbType: mysql
     mapper-locations: classpath:mybatis/mapper/*.xml # nameSpace必须与mapper的接口名一致
     configuration:
       mapUnderscoreToCamelCase: true
